@@ -2,9 +2,7 @@
 ##
 ## Makefile for the aman(1) client.
 ##
-## (C) Copyright 2012 Fred Gleason <fredg@paravelsystems.com>
-##
-##      $Id: Makefile.am,v 1.2 2012/12/19 00:09:11 cvs Exp $
+## (C) Copyright 2012,2017 Fred Gleason <fredg@paravelsystems.com>
 ##
 ##   This program is free software; you can redistribute it and/or modify
 ##   it under the terms of the GNU General Public License version 2 as
@@ -22,7 +20,7 @@
 ##
 ## Use automake to process this into a Makefile.in
 
-AM_CPPFLAGS = -Wall -I$(top_srcdir)/lib -DPREFIX=\"$(prefix)\"
+AM_CPPFLAGS = -Wall -I$(top_srcdir)/lib -DPREFIX=\"$(prefix)\" @QT4_GUI_CFLAGS@
 LIBS = -L$(top_srcdir)/lib
 
 # The dependency for qt's Meta Object Compiler (moc)
@@ -40,7 +38,7 @@ nodist_aman_SOURCES = moc_aman.cpp\
                       moc_connection.cpp\
                       moc_statuslight.cpp
 
-aman_LDADD = @LIB_ALIBS@
+aman_LDADD = @LIB_ALIBS@ @QT4_GUI_LIBS@
 aman_LDFLAGS = @LIB_AFLAGS@
 
 CLEANFILES = *~\
