@@ -2,9 +2,7 @@
 ##
 ## Makefile for the amand(8) daemon.
 ##
-## (C) Copyright 2012 Fred Gleason <fredg@paravelsystems.com>
-##
-##      $Id: Makefile.am,v 1.12 2013/06/24 19:51:06 cvs Exp $
+## (C) Copyright 2012,2017 Fred Gleason <fredg@paravelsystems.com>
 ##
 ##   This program is free software; you can redistribute it and/or modify
 ##   it under the terms of the GNU General Public License version 2 as
@@ -22,7 +20,7 @@
 ##
 ## Use automake to process this into a Makefile.in
 
-AM_CPPFLAGS = -Wall -I$(top_srcdir)/lib -DPREFIX=\"$(prefix)\"
+AM_CPPFLAGS = -Wall -I$(top_srcdir)/lib -DPREFIX=\"$(prefix)\" @QT4_CLI_CFLAGS@
 LIBS = -L$(top_srcdir)/lib
 
 # The dependency for qt's Meta Object Compiler (moc)
@@ -47,7 +45,7 @@ nodist_amand_SOURCES = moc_amand.cpp\
                        moc_replicationtest.cpp\
                        moc_streamcmdserver.cpp
 
-amand_LDADD = @LIB_ALIBS@
+amand_LDADD = @LIB_ALIBS@ @QT4_CLI_LIBS@
 amand_LDFLAGS = @LIB_AFLAGS@
 
 CLEANFILES = *~\
