@@ -2,9 +2,7 @@
 //
 // Monitor the Opposite Aman Instance
 //
-//   (C) Copyright 2012 Fred Gleason <fredg@paravelsystems.com>
-//
-//      $Id: pingmonitor.cpp,v 1.9 2013/11/19 00:14:40 cvs Exp $
+//   (C) Copyright 2012,2017 Fred Gleason <fredg@paravelsystems.com>
 //
 //   This program is free software; you can redistribute it and/or modify
 //   it under the terms of the GNU General Public License version 2 as
@@ -23,7 +21,7 @@
 #include <stdint.h>
 #include <syslog.h>
 
-#include <QtCore/QStringList>
+#include <QStringList>
 
 #include "pingmonitor.h"
 
