@@ -2,9 +2,7 @@
 //
 // Monitor the Opposite Aman Instance
 //
-//   (C) Copyright 2012 Fred Gleason <fredg@paravelsystems.com>
-//
-//      $Id: pingmonitor.h,v 1.8 2013/06/24 19:51:06 cvs Exp $
+//   (C) Copyright 2012,2017 Fred Gleason <fredg@paravelsystems.com>
 //
 //   This program is free software; you can redistribute it and/or modify
 //   it under the terms of the GNU General Public License version 2 as
@@ -23,11 +21,11 @@
 #ifndef PINGMONITOR_H
 #define PINGMONITOR_H
 
-#include <QtCore/QObject>
-#include <QtCore/QTimer>
-#include <QtCore/QSignalMapper>
-#include <QtCore/QTimer>
-#include <QtNetwork/QUdpSocket>
+#include <QObject>
+#include <QTimer>
+#include <QSignalMapper>
+#include <QTimer>
+#include <QUdpSocket>
 
 #include <config.h>
 #include <state.h>
