@@ -2,8 +2,6 @@
 ##
 ##    (C) Copyright 2002-2003 Fred Gleason <fredg@paravelsystems.com>
 ##
-##      $Id: autogen.sh,v 1.5 2010/07/29 19:32:30 cvs Exp $
-##
 ##    Adapted from './autogen.sh' in the Jack Audio Connection Kit.
 ##    Copyright (C) 2001-2003 Paul Davis, et al.
 ##
