@@ -4,8 +4,6 @@
 ##
 ## (C) Copyright 2013 Fred Gleason <fredg@paravelsystems.com>
 ##
-##   $Id: rc.amand.in,v 1.2 2013/06/25 16:23:16 cvs Exp $
-##
 ##    This program is free software; you can redistribute it and/or modify
 ##    it under the terms of version 2 of the GNU General Public License as
 ##    published by the Free Software Foundation;
