@@ -22,7 +22,7 @@
 ##
 ## Use automake to process this into a Makefile.in
 
-AM_CPPFLAGS = -Wall -I$(top_srcdir)/lib -DPREFIX=\"$(prefix)\"
+AM_CPPFLAGS = -Wall -I$(top_srcdir)/lib -DPREFIX=\"$(prefix)\" @QT4_CLI_CFLAGS@
 LIBS = -L$(top_srcdir)/lib
 
 # The dependency for qt's Meta Object Compiler (moc)
@@ -36,7 +36,7 @@ dist_sqltorture_SOURCES = sqltorture.cpp sqltorture.h
 
 nodist_sqltorture_SOURCES = moc_sqltorture.cpp
 
-sqltorture_LDADD = @LIB_ALIBS@
+sqltorture_LDADD = @LIB_ALIBS@ @QT4_CLI_LIBS@
 sqltorture_LDFLAGS = @LIB_AFLAGS@
 
 
